static/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700;800&family=Roboto:wght@300;400;500;700&display=swap');

/* Add a smooth scrolling effect to the document */
html {
    scroll-behavior: smooth;
}

nav {
    background-color: #247BA0;
}

.sidenav {
    background-color: #247BA0;
}

.sidenav li > a {
    color: #fafafa;
}

.clinic-logo {
    height: 100px;
    width: 100px;
    display: block;
    margin: auto;
    margin-top: 7rem;
}

.dropdown-content li > a {
    color: #fafafa;
}

.dropdown-content li > a:hover {
    background: #16546e;
}

.nav-dropdown, .collapsible-body {
    background: #16546e !important;
}

.collapsible-header {
    color: #fafafa;
    padding: 0 2.3rem !important;
}

.slides h2 {
    font-family: 'Roboto', sans-serif;
    text-shadow: 0.25rem 0.25rem 0.3rem #343a40;
    color: #fff;
    font-weight: 700;
}

.slide-subh {
    font-family: 'Montserrat', sans-serif;
    color: #00234B;
    text-shadow: 0.25rem 0.25rem 0.8rem #343a40;
}

.highlight {
    color: #16546e;
    font-family: 'Montserrat', sans-serif;
    font-style: italic;
}

.search-heading {
    font-family: 'Roboto', sans-serif;
    color: #16546e;
    font-size: 1.3rem;
    margin-bottom: 2rem;
}

#search-container {
    margin-top: 5rem;
}

.btn-slider {
    background-color: #F68C48;
    border-radius: 0.5rem;
}

.button-wrap {
    margin-top: 3rem;
}

#search-section {
    background-color: #f4f4f4;
    padding-bottom: 3rem;
}

.main-section{
    margin-top: 2rem;
}

.icon {
    color: #2bbbad;
    margin-top: 3rem;
}

#search-icon {
    margin-top: 0;
    color: #F68C48;
    padding-right: 1.2rem;
}

.main-heading {
    font-family: 'Roboto', sans-serif;
    padding-bottom: 2rem;
    color: #16546e;
    font-weight: 600;
    letter-spacing: 0.12rem;
}

.about-heading {
    font-family: 'Roboto', sans-serif;
    color: #16546e;
    font-weight: 600;
    letter-spacing: 0.12rem;
    margin-top: 5rem;
}

#why-section {
    padding-bottom: 6rem;
    background-color: #f4f4f4;
}

#why-heading {
    padding-top: 3rem;
}

.request-btn {
    margin-top: 3rem;
    display: inline-block;
    margin: 0.3em;
    padding: 1.2em 5em;
    overflow: hidden;
    position: relative;
    text-decoration: none;
    text-transform: uppercase;
    border-radius: 3px;
    -webkit-transition: 0.3s;
    -moz-transition: 0.3s;
    -ms-transition: 0.3s;
    -o-transition: 0.3s;
    transition: 0.3s;
    box-shadow: 0 2px 10px rgba(0,0,0,0.5);
    border: none; 
    font-size: 15px;
    text-align: center;
    background-color: #26a69a;
    color: white;
  }

.request-btn:hover {
    box-shadow: 0.063rem 0.375rem 0.95rem rgba(0,0,0,0.5);
  }
  
.request-btn i {
      padding-left: 1rem;
  }

#about-us {
    margin-top: 2.5;
    margin-bottom: 4rem;
}

/* style flash messages */
.flash-messages{
    color: #fafafa;
    font-family: 'Roboto', sans-serif;
    padding: 0.05rem 0.05rem 0.05rem 1rem;
    background-color: #70C1B3;
}

/* The hero image */
.doc-image {
    background: url(../images/doctor_smartphone.jpg) no-repeat center;
    background-size: cover;
    position: relative;
    min-height: 100vh;
}

.login-image {
    background: url(../images/woman_smarthphone.jpg) no-repeat center;
    background-size: cover;
    position: relative;
    min-height: 100vh;
}

.register-image {
    background: url(../images/mother_with_babies.jpg) no-repeat center;
    background-size: cover;
    position: absolute;
}

.login-heading {
    margin: 2rem;
    font-family: 'Montserrat', sans-serif;
    color: #F18541;
    font-weight: 600;
    text-shadow: 0.1rem 0.1rem #343a40;
    letter-spacing: 0.12rem;
    font-size: 2.5rem;
}

#profile-heading {
    color: #F18541;
    font-family: 'Montserrat', sans-serif;
    font-weight: 500;
    text-shadow: 0.1rem 0.1rem #343a40;
    letter-spacing: 0.12rem;
}

.para-details {
    padding: 1.4rem;
    font-size: 1.5rem;
}

#para-sub {
    padding: 1.4rem;
}

.patient-card {
    background-color: #f4f4f4;
    border-radius: 1rem;
}

.profile-buttons {
    padding-right: 1rem;
    padding-top: 1rem;
}

a.edit-profile {
    color: #26a69a;
    font-size: 1.1rem;
    font-weight: bold;
    text-shadow: 0 0 #343a40;
}

.dotted-border{
    border-top: 0.09rem dashed #F18541;
}

.full-border{
    border-top: 0.09rem solid #F18541;
}

.fa-user-edit {
    font-size: 1.2rem;
}

.sign-btn {
    background-color: #F68C48;
    color: #ffffff;
    border: none;
    line-height: 1rem;
}

.sign-btn:hover,
.sign-btn:focus,
.sign-btn:active {
  background-color: #91CEB9 !important;
  border-color: #91CEB9 !important;
  box-shadow: 0.2rem 0.2rem #91c5ce !important;
  -webkit-box-shadow: 0.2rem 0.2rem #91CEB9 !important;
  border: 0.1rem solid;
}

/* overwrite slider indicator color */
.slider .indicators .indicator-item.active {
    background-color: #247BA0;
  }

/* overwrite Materialize card-action attribute */
.card-action a {
    text-align: center !important;
    font-size: 0.85rem;
    font-weight: bold;
    text-shadow: 0.05rem 0.05rem #000;;
}

.card-panel {
    border-radius: 1rem;
    margin: 2.5rem;
}

.card-title {
    color: #16546e;
    font-family: 'Roboto', sans-serif;
    font-weight: 500 !important;
    font-size: 2rem !important;
    letter-spacing: 0.1rem;
}

.card-action a {
    margin-right: 0 !important;
}

#speciality {
    text-align: center;
}

#register-form {
    margin-top: 2rem;
}

#register-heading {
    margin: 2rem;
    font-family: 'Montserrat', sans-serif;
    color: #F18541;
    font-weight: 600;
    text-shadow: 0.1rem 0.1rem #343a40;
    letter-spacing: 0.12rem;
    font-size: 2.5rem;
}

.btn-register {
    top: 75%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: #F68C48;
}

.btn-request {
    top: 75%;
    left: 50%;
    background-color: #F68C48;
}

/* parallax - code was sourced from: https://materializecss.com/parallax.html */
.parallax-container {
    height: 30rem ;
  }

.parallax-heading {
    position: absolute;
    top: 20%;
    font-family: 'Roboto', sans-serif;
    text-shadow: 0.125rem 0.125rem 0.313rem #343a40;
    color: #fff;
    font-weight: 700;
    padding-left: 0.7rem;
}

.btn-profile {
    display: inline;
    text-align: center;
}

/* footer styling*/
.page-footer {
    background-color: #247BA0;
    color: #ffffff;
    font-size: 1rem;
    font-family: 'Work Sans', sans-serif;
    font-weight: 400;
  }

/* forces body to full height so footer can be positioned to bottom */
body {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    min-height: 100vh;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
}

/* Validate select option for a Materialize dropdown */
/* code was sourced from: https://stackoverflow.com/questions/34248898/how-to-validate-select-option-for-a-materialize-dropdown/38671029#38671029 */

select[required]:focus{
    outline: none !important;
}

select[required]{
    display: block;
    padding: 0;
    position: absolute;
    background: transparent;
    color: transparent;
    border: none;
    top: 0;
}

#map {
    height: 300px;
    width: 80%;
    margin: auto;
  }

#address {
    margin-bottom: 1rem;
}

/* Display full screen height */
.error-section {
    min-height: 85vh;
}

#error-heading > h5 {
    margin-top: 2.5rem;
    margin-bottom: 1rem;
    font-family: 'Montserrat', sans-serif;;
}

#home-btn {
    top: 75%;
    left: 50%;
    transform: translate(-50%, -50%);
    margin-top: 5rem;
}

/* Custom modal design - code source: https://www.jquery-az.com/materialize/demo.php?ex=53.0_4#! */
.modal {
    left: 0;
    right: 0;
    background-color: #e1f5fe;
    padding: 0;
    max-height: 40%;
    width: 35%;
    will-change: top, opacity;
}

#modal-contact {
    left: 0;
    right: 0;
    padding: 0;
    background-color: #fafafa !important;
    max-height: 100% !important;
    width: 90% !important;
    overflow-y: hidden !important ;
    will-change: top, opacity;
}

.modal .modal-footer {
    border-radius: 0 0 0.125rem 0.125rem;
    background-color: #B9DFD2;
    padding: 0.25rem 0.375rem;
    height: 3.75rem;
    width: 100%;
    text-align: right;
}

/* Overwrite modal size defined for profile updates */
.datepicker-modal {
    max-height: 100%;
    width: 100%;
}

.form-control {
    padding: .375rem .75rem;
}

#btn-delete {
    margin-left: 1rem;
}

.materialize-textarea {
    height: 15rem;
}

.social-media > a {
    color: #fafafa;
    font-size: 2rem;
    padding-right: 0.3rem;
}

.doctor-name {
    color: #16546e;
    font-family: 'Montserrat', sans-serif;
}

#doc-image {
    margin-top: 1rem;
    height: 3.5rem;
    width: 3.5rem;
}

#doctor-details{
    padding-left: 1rem;
}

.doctor-image {
    display: block;
    margin-right: auto;
    margin-left: auto;
    height: 12rem;
    width: 12rem;
}

.config-buttons {
    padding-bottom: 2.2rem;
    padding-right: 1.6rem;
}

.fa-github {
    color: #dcd8d8;
    padding-left: 0.8rem;
}

/* Media Queries */
/* Display on tablet devices */  
@media only screen 
  and (min-width : 768px) 
  and (max-width : 1024px) 
  and (-webkit-min-device-pixel-ratio: 1) {
    .parallax-heading {
        position: absolute;
        font-family: 'Roboto', sans-serif;
    }
}

/* Display on large devices */
@media screen 
  and (min-width: 1024px) {
    .brand-logo {
        padding-left: 1rem !important;
    }

    .parallax-heading {
        position: relative;
        margin-top: 3rem;
    }

    .btn-register {
        top: 45%;
        left: 50%;
        transform: translate(-50%, -50%);
    }
}

